@@ -4,7 +4,7 @@ Date: 2007-11-29
 Title: Molecular signatures for survival clinical data
 Author: Ramon Diaz-Uriarte <rdiaz@ligarto.org>. Imagemap code from Barry Rowlingson <B.Rowlingson@lancaster.ac.uk>
 Maintainer: Ramon Diaz-Uriarte <rdiaz@ligarto.org>
-Depends: R (>= 2.0.0), party, survival, GDD, combinat, MASS, R2HTML
+Depends: R (>= 2.0.0), party, survival, GDD, combinat, MASS, R2HTML, mboost
 Description: whatever
 	     Main applications in high-dimensional data
 	     (e.g., microarray data, and other genomics and proteomics
