@@ -92,6 +92,16 @@ to send results to <a href="http://pals.bioinfo.cnio.es">PaLS</a>. Go to the bot
 results, click on the links, and you will be taken to PaLS. If you run the second set, it will
 take a few minutes to get completed.</p>
 
+
+<h4><a name="pals-signs-example">Sending results to PaLS when using Random
+forests</a></h4>
+<p><a href="./PaLS-cforest-example/results.html">This<a> is similar to the
+above example, but we use Random forest. You can send results to <a
+href="http://pals.bioinfo.cnio.es">PaLS</a>. Go to the bottom of the
+results, click on the links, and you will be taken to PaLS. If you run the
+second set, it will take a few minutes to get completed.</p>
+
+
 <!-- <h3>Examples for TGD</h3> -->
 <!-- <p>Comming soon.</p> -->
 
