@@ -10,11 +10,11 @@
 	Dave et al.  (FCMS)" section nil nil [6755 9760]) ("Threshold gradient descent for censored data of Gui and
 	Li (TGD)" section (:members (("their
 	paper" section nil nil [10978 11751]) ("original paper" section nil nil [11751 12773]) ("R
-      code" section nil nil [12773 13590]))) nil [9760 13590]) ("Assessment" section nil nil [13590 15250]))) nil [6703 15250]) ("Usage" section (:members (("Input" section (:members (("Expression data file" section (:members (("preprocessor" section nil nil [17729 18483]))) nil [15334 18483]) ("Survival time file" section nil nil [18483 19301]) ("Survival status (event) file" section nil nil [19301 19732]) ("Validation data" section nil nil [19732 22329]) ("Type of gene identifier and species" section (:members (("IDConverter" section nil nil [22712 22794]))) nil [22329 22794]))) nil [15294 22794]) ("Output" section (:members (("Plots" section (:members (("above" section nil nil [23008 25553]) ("original paper" section nil nil [25553 25840]))) nil [22835 25840]) ("Textual output" section (:members (("Single-gene statistics and p-values" section nil nil [25893 26171]) ("OOB predictions" section nil nil [26171 26222]) ("OOB predictions" section (:members (("Tnasas" section nil nil [26767 26962]))) nil [26222 26962]) ("Model results and parameters" section (:members (("below" section nil nil [29653 29698]))) nil [26962 29698]) ("Stability assessments" section nil nil [29698 30909]) ("Validation data" section nil nil [30909 31229]))) nil [25840 31229]) ("Download figures and results" section nil nil [31229 31689]) ("Sending results to <a
-href=\"http://pals.bioinfo.cnio.es\">PaLS" section nil nil [31689 32966]))) nil [22794 32966]) ("How long does it take?" section nil nil [32966 33627]) ("Examples" section (:members (("here" section nil nil [33746 33823]))) nil [33627 33823]))) nil [15250 33823]) ("Author and Acknowledgements" section (:members (("Bioinformatics Unit" section nil nil [34026 34191]) ("Python" section nil nil [34191 35503]) ("GDD" section nil nil [35503 35568]) ("imagemap" section nil nil [35568 37147]) ("RTICCC" section nil nil [37147 37217]))) nil [33823 37217]) ("Terms of use" section (:members (("http://signs.bioinfo.cnio.es" section nil nil [38015 38259]))) nil [37217 38259]) ("Privacy and	Security" section nil nil [38259 38929]) ("Disclaimer" section (:members (("-->
-      <!-- 	How To Ask Questions The Smart Way" section nil nil [39613 39778]))) nil [38929 39778]) ("References" section (:members (("pdf" section nil nil [40243 40508]) ("Copyright" section (:members (("" section nil nil [40765 40924]) ("" section nil nil [40924 40927]))) nil [40508 40511]))) nil [39778 39781]))) nil [2533 2536]))) nil [830 836]))
+      code" section nil nil [12773 13829]))) nil [9760 13829]) ("Assessment" section nil nil [13829 15489]))) nil [6703 15489]) ("Usage" section (:members (("Input" section (:members (("Expression data file" section (:members (("preprocessor" section nil nil [17968 18722]))) nil [15573 18722]) ("Survival time file" section nil nil [18722 19540]) ("Survival status (event) file" section nil nil [19540 19971]) ("Validation data" section nil nil [19971 22568]) ("Type of gene identifier and species" section (:members (("IDConverter" section nil nil [22951 23033]))) nil [22568 23033]))) nil [15533 23033]) ("Output" section (:members (("Plots" section (:members (("above" section nil nil [23247 25792]) ("original paper" section nil nil [25792 26079]))) nil [23074 26079]) ("Textual output" section (:members (("Single-gene statistics and p-values" section nil nil [26132 26410]) ("OOB predictions" section nil nil [26410 26461]) ("OOB predictions" section (:members (("Tnasas" section nil nil [27006 27201]))) nil [26461 27201]) ("Model results and parameters" section (:members (("below" section nil nil [29892 29937]))) nil [27201 29937]) ("Stability assessments" section nil nil [29937 31148]) ("Validation data" section nil nil [31148 31468]))) nil [26079 31468]) ("Download figures and results" section nil nil [31468 31928]) ("Sending results to <a
+href=\"http://pals.bioinfo.cnio.es\">PaLS" section nil nil [31928 33205]))) nil [23033 33205]) ("How long does it take?" section nil nil [33205 33866]) ("Examples" section (:members (("here" section nil nil [33985 34062]))) nil [33866 34062]))) nil [15489 34062]) ("Author and Acknowledgements" section (:members (("Bioinformatics Unit" section nil nil [34265 34430]) ("Python" section nil nil [34430 35742]) ("GDD" section nil nil [35742 35807]) ("imagemap" section nil nil [35807 37386]) ("RTICCC" section nil nil [37386 37456]))) nil [34062 37456]) ("Terms of use" section (:members (("http://signs.bioinfo.cnio.es" section nil nil [38254 38498]))) nil [37456 38498]) ("Privacy and	Security" section nil nil [38498 39168]) ("Disclaimer" section (:members (("-->
+      <!-- 	How To Ask Questions The Smart Way" section nil nil [39852 40017]))) nil [39168 40017]) ("References" section (:members (("pdf" section nil nil [40482 40747]) ("Copyright" section (:members (("" section nil nil [41004 41163]) ("" section nil nil [41163 41166]))) nil [40747 40750]))) nil [40017 40020]))) nil [2533 2536]))) nil [830 836]))
     :file "signs-help.html"
-    :pointmax 41098
+    :pointmax 41337
     :unmatched-syntax 'nil
     )
    )
