@@ -228,7 +228,8 @@ Descent (Li and Gui).<br>
       <tr><td width="100"></td><td>&#8710;&#957; (Delta nu)</td><td> <input type="TEXT" name="epi"
 	value="5e-06" size="7"
 	maxlength="7"></td></tr>	
-	<tr><td width="100"></td><td>&#964; (tau) </td><td> <input type="TEXT" name="tau"
+	<tr><td width="100"></td><td>&#964; (tau) [Please, use only large
+    values, over 0.8, unless you really know what you are doing!] </td><td> <input type="TEXT" name="tau"
 	  value="0.9" size="7"
 	  maxlength="7"></td></tr>
 	</table>
