@@ -1,5 +1,6 @@
 0.9:
     - Added cforest
+    - Added mboost
 0.8:
     - Fixed problem in prediction step when final model has no terms.
     - Fixed problem in dStep1.parallel: can now run even if model can't be fitted.
